caddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
  labels:
    app: caddy
spec:
  namespace: caddy-test
  type: ClusterIP
  selector:
    app: caddy
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
