caddy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
  namespace: caddy-test
  annotations:
    kubernetes.io/ingress.class: "nginx" # 使用するIngressコントローラーに応じて変更
spec:
  rules:
  - host: caddy.akatuki-host.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caddy-service
            port:
              number: 80
